# learn-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  go.mod  go.sum
go/hello/: BUILD.bazel  main.go
go/hello/cmd/: BUILD.bazel  root.go
go/kube-cli/: BUILD.bazel  main.go
go/kube-cli/cmd/: BUILD.bazel  root.go
go/kube-cli/pkg/api/statectl/v1alpha1/: BUILD.bazel  doc.go  groupversion_info.go  instance_types.go
