module(
    name = "learn_bazel",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.36.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(
    name = "go_sdk_1_22_8",
    version = "1.22.8",
)

use_repo(go_sdk, "go_sdk_1_22_8")

go_rules_dependencies = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_rules_dependencies",
)

use_repo(go_rules_dependencies, "io_bazel_rules_go")
