load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "doc.go",
        "groupversion_info.go",
        "instance_types.go",
    ],
    importpath = "github.com/alexgmm/learn-bazel/go/kube-cli/pkg/api/statectl/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime/schema",
    ],
)
